Update WebFontPicker bookmarklet

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
                 (function() {
                     var WFP = window.WFP = window.WFP || {};
-                    WFP.bookmarklet = 1;
+                    WFP.bookmarklet = 2;
                     WFP.Picker && WFP.Picker.show();
                     if (WFP.attached || WFP.Picker) return;
                     function loadStylesheet(url) {
@@ -108,8 +108,8 @@
                         script.src = url;
                         document.head.appendChild(script);
                     }
-                    loadStylesheet('http://gavrilov.co.uk/wfp/WFP.css');
-                    loadScript('http://gavrilov.co.uk/wfp/WFP.full.min.js');
+                    loadStylesheet('//gavrilov.co.uk/wfp/WFP.css');
+                    loadScript('//gavrilov.co.uk/wfp/WFP.full.min.js');
                     WFP.attached = true;
                 })();
 
