Remove the dead links
Which is like, most of them.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <h1>Daniel Gavrilov</h1>
                 <p>I build things, usually for the web.</p>
              </header>
- 
+
             <section class="recent">
-                <h2><span>Recent things</span></h2>
- 
+                <h2><span>Some things I've made</span></h2>
+
                 <div class="thing">
                     <h3><a href="http://alevels.herokuapp.com">A-level schools</a></h3>
                     <p>Find and compare A-level schools.</p>
@@ -34,43 +34,7 @@
                     <p>Preview Google Fonts instantly.</p>
                 </div>
             </section>
- 
-            <section class="past">
-                <h2><span>Things from the past</span></h2>
- 
-                <div class="thing">
-                    <time>Feb 2013</time>
-                    <a href="http://dl.dropboxusercontent.com/u/5720002/robomac/index.html" class="content">
-                        <h3>Robomac 2013</h3>
-                        <p>Designed and coded a student competition website.</p>
-                    </a>
-                </div>
- 
-                <div class="thing">
-                    <time>Jun 2012</time>
-                    <a href="http://eestec-sk.org.mk/gonewild" class="content">
-                        <h3>EESTECers Gone Wild</h3>
-                        <p>Built a small website to promote a student holiday.</p>
-                    </a>
-                </div>
- 
-                <div class="thing">
-                    <time>Jul 2011</time>
-                    <a href="http://ultim8.info" class="content">
-                        <h3>ultim8</h3>
-                        <p>A one-page website for the team.</p>
-                    </a>
-                </div>
- 
-                <div class="thing">
-                    <time>Mar 2010</time>
-                    <a href="http://0.mk" class="content">
-                        <h3>0.mk</h3>
-                        <p>Designed a macedonian URL shortener.</p>
-                    </a>
-                </div>
-            </section>
- 
+
             <footer>
                 <hr>
                 <a href="mailto:daniel@gavrilov.co.uk" class="email">daniel<span>@</span>gavrilov.co.uk</a>
