--- a/projects/techsoc/index.html
+++ b/projects/techsoc/index.html
@@ -35,7 +35,7 @@ date: "2016-06-07"
         </p>
 
         <p>
-          The website was built in <a href="https://jekyllrb.com/">Jekyll</a> and ran on <a href="https://pages.github.com/">Github Pages</a>. My favourite features were the ones that were kind of hacked together and uncommon for Jekyll sites, like:
+          The website was built in <a href="https://jekyllrb.com/">Jekyll</a> and ran on <a href="https://pages.github.com/">GitHub Pages</a>. My favourite features were the ones that were kind of hacked together and uncommon for Jekyll sites, like:
         </p>
 
         <ul>
