Update project descriptions

--- a/projects/alevel-schools/index.html
+++ b/projects/alevel-schools/index.html
@@ -2,7 +2,7 @@
 id: alevel-schools
 theme: alevel-schools
 title: A-level schools
-description: A-level schools comparison.
+description: A-level schools comparison
 thumbnail: "thumbnail.png"
 date: "2014-04-26"
 ---
