--- a/projects/course-results/index.html
+++ b/projects/course-results/index.html
@@ -2,7 +2,7 @@
 id: course-results
 theme: course-results
 title: Course results
-description: Visualisation of provisional results at UCL.
+description: Visualisation of provisional results at UCL
 thumbnail: "thumbnail.png"
 date: "2017-06-29"
 ---
