--- a/projects/robovis/index.html
+++ b/projects/robovis/index.html
@@ -2,7 +2,7 @@
 id: robovis
 theme: robovis
 title: RoboVis
-description: Sensor data visualisation.
+description: Sensor data visualisation
 thumbnail: "thumbnail.png"
 date: "2015-06-14"
 ---
