--- a/projects/room-bookings/index.html
+++ b/projects/room-bookings/index.html
@@ -2,7 +2,7 @@
 id: room-bookings
 theme: room-bookings
 title: UCL room bookings
-description: Redesign of UCL's room bookings website.
+description: Redesign of UCL's room bookings website
 thumbnail: "thumbnail.png"
 date: "2017-07-11"
 in_progress: true
