--- a/projects/techsoc/index.html
+++ b/projects/techsoc/index.html
@@ -2,7 +2,7 @@
 id: techsoc
 theme: techsoc
 title: UCL TechSoc
-description: UCL TechSoc website 2015&ndash;2016.
+description: UCL TechSoc website 2015&ndash;2016
 thumbnail: "thumbnail.png"
 date: "2016-06-07"
 ---
