--- a/projects/train-matching/index.html
+++ b/projects/train-matching/index.html
@@ -1,8 +1,8 @@
 ---
 id: train-matching
 theme: train-matching
-title: Train service matching
-description: Train matching online algorithm.
+title: Train matching
+description: Algorithm to match train services
 thumbnail: "thumbnail.jpg"
 date: "2016-04-27"
 ---
