--- a/projects/webfontpicker/index.html
+++ b/projects/webfontpicker/index.html
@@ -2,7 +2,7 @@
 id: webfontpicker
 theme: webfontpicker
 title: WebFontPicker
-description: A bookmarklet for previewing Google Fonts.
+description: Bookmarklet for previewing Google Fonts
 thumbnail: "thumbnail.png"
 date: "2013-12-11"
 ---
