--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ redirect_from: /projects/
     <div class="col s12 l8">
       <div class="content">
         <p>
-          Hello! I'm a recent Computer Science graduate, currently working on <a href="http://flourish.studio"><strong>Flourish</strong></a>. Below are some of my projects, most of them related to data visualisation.
+          Hello! I'm a recent Computer Science graduate, currently working at <a href="https://ourworldindata.org"><strong>Our World in Data</strong></a>. Below are some of my projects, most of them related to data visualisation.
         </p>
         <p>
           Feel free to <a href="mailto:daniel@gavrilov.co.uk">get in touch</a>.
