Update room bookings project description

--- a/projects/room-bookings/index.html
+++ b/projects/room-bookings/index.html
@@ -31,7 +31,7 @@ date: "2017-07-11"
       <div class="col s12 push-m1 m10 push-l2 l8">
 
         <p>
-          A <strong>work in progress</strong>; an attempt to build a better user interface for bookings.
+          Trying to create a better user interface for room bookings at my university.
         </p>
 
       </div>
