Update intro, mention Pingotel & Kolo

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@ redirect_from: /projects/
   <div class="row">
     <div class="col s12 l8">
       <div class="content">
-        <p>Hello! I'm currently taking a break from employment to work on personal projects.</p>
+        <p>Hello! I'm currently building <a href="https://pingotel.com" target="_blank">Pingotel</a>, a simple self-service booking engine.</p>
         <p>
-          In the past, I worked on data visualisation tools at <a href="https://ourworldindata.org"><strong>Our World in
-              Data</strong></a>
-          and <a href="https://flourish.studio"><strong>Flourish</strong></a>.
+          In the past, I was an early employee at <a href="https://kolo.app" target="_blank"><strong>Kolo</strong></a> (2024), <a href="https://ourworldindata.org" target="_blank"><strong>Our World in
+              Data</strong></a> (2018&ndash;2022)
+          and <a href="https://flourish.studio" target="_blank"><strong>Flourish</strong></a> (2017&ndash;2018).
         </p>
         <p>
-          Below are some of my older personal projects, most of them related to data visualisation.
+          Below are some of my older personal projects (I haven't updated this site in a while).
           Feel free to <a href="mailto:daniel@gavrilov.co.uk">get in touch</a>.
         </p>
       </div>
