--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ redirect_from: /projects/
           and <a href="https://flourish.studio" target="_blank"><strong>Flourish</strong></a>&nbsp;(2017&ndash;2018).
         </p>
         <p>
-          Below are some of my older personal projects (I haven't updated this site in a while).
-          Feel free to <a href="mailto:daniel@gavrilov.co.uk">get in touch</a>.
+          Below are some of my older personal projects (I unfortunately haven't updated this site in a while).
         </p>
+        <p>Feel free to <a href="mailto:daniel@gavrilov.co.uk">get in touch</a>.</p>
       </div>
     </div>
   </div>
