chore: remove sentence

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ redirect_from: /projects/
           and <a href="https://flourish.studio" target="_blank"><strong>Flourish</strong></a>&nbsp;(2017&ndash;2018).
         </p>
         <p>
-          Below are some of my <em>older</em> personal projects. I will update this site eventually&hellip;
+          Below are some of my <em>older</em> personal projects.
         </p>
         <p>Feel free to <a href="mailto:daniel@gavrilov.co.uk">get in touch</a>.</p>
       </div>
