chore: update paragraph

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ redirect_from: /projects/
   <div class="row">
     <div class="col s12 l8">
       <div class="content">
-        <p>Hello! I'm currently building <a href="https://pingotel.com" target="_blank"><strong>Pingotel</strong></a>, a simple self-service booking engine.</p>
+        <p>Hello! I'm currently building <a href="https://pingotel.com" target="_blank"><strong>Pingotel</strong></a>, a simple and versatile booking system.</p>
         <p>
           In the past, I was an early employee at <a href="https://kolo.app" target="_blank"><strong>Kolo</strong></a>&nbsp;(2024), <a href="https://ourworldindata.org" target="_blank"><strong>Our World in
               Data</strong></a>&nbsp;(2018&ndash;2022)
